--- a/assets/basic_styles/globals.scss
+++ b/assets/basic_styles/globals.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'ProximaNova-Semibold';
-  src: url('../assets/all_fonts/proxima_nova/ProximaNova-Semibold.woff2') format('woff2'), url('../assets/all_fonts/proxima_nova/ProximaNova-Semibold.woff') format('woff');
+  src: url('../all_fonts/proxima_nova/ProximaNova-Semibold.woff2') format('woff2'), url('../all_fonts/proxima_nova/ProximaNova-Semibold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: 'ProximaNova-Bold';
-  src: url('../assets/all_fonts/proxima_nova/ProximaNova-Bold.woff2') format('woff2'), url('../assets/all_fonts/proxima_nova/ProximaNova-Bold.woff') format('woff');
+  src: url('../all_fonts/proxima_nova/ProximaNova-Bold.woff2') format('woff2'), url('../all_fonts/proxima_nova/ProximaNova-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: 'ProximaNova-Regular';
-  src: url('../assets/all_fonts/proxima_nova/ProximaNova-Regular.woff2') format('woff2'), url('../assets/all_fonts/proxima_nova/ProximaNova-Regular.woff') format('woff');
+  src: url('../all_fonts/proxima_nova/ProximaNova-Regular.woff2') format('woff2'), url('../all_fonts/proxima_nova/ProximaNova-Regular.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -26,7 +26,7 @@
 
 @font-face {
   font-family: 'ProximaNova-Light';
-  src: url('../assets/all_fonts/proxima_nova/ProximaNova-Light.woff2') format('woff2'), url('../assets/all_fonts/proxima_nova/ProximaNova-Light.woff') format('woff');
+  src: url('../all_fonts/proxima_nova/ProximaNova-Light.woff2') format('woff2'), url('../all_fonts/proxima_nova/ProximaNova-Light.woff') format('woff');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -42,17 +42,15 @@
 
 
 /* Global-styles */
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
 html,
 body {
   max-width: 100vw;
   font-family: 'ProximaNova-Regular';
   text-transform: uppercase;
+}
+
+body {
+  padding: 0 20px;
 
   h1,
   h2,
@@ -61,9 +59,15 @@ body {
     font-family: 'ProximaNova-Light';
   }
 
-  a {
-    color: inherit;
-    text-decoration: none;
+  a,
+  button,
+  select {
+    cursor: pointer;
+  }
+
+  span,
+  select {
+    font-family: 'ProximaNova-Semibold';
   }
 }
 
@@ -95,7 +99,7 @@ body {
   }
 
   span {
-    font-size: 2vw;
+    font-size: 3vw;
   }
 }
 
@@ -123,7 +127,7 @@ body {
   }
 
   span {
-    font-size: 0.5vw;
+    font-size: 0.8vw;
   }
 }
 
@@ -148,7 +152,7 @@ body {
   }
 
   span {
-    font-size: 0.5vw;
+    font-size: 1vw;
   }
 }
 
@@ -173,7 +177,7 @@ body {
   }
 
   span {
-    font-size: 0.5vw;
+    font-size: 1.1vw;
   }
 }
 
@@ -201,6 +205,6 @@ body {
   }
 
   span {
-    font-size: 0.5vw;
+    font-size: 1.2vw;
   }
 }
