--- a/assets/basic_styles/globals.scss
+++ b/assets/basic_styles/globals.scss
@@ -73,33 +73,33 @@ body {
 
 
 
-
 /* Media queries */
 @media (min-width: 0px) and (max-width: 767px) {
   /* Брейк от 0 до 767 */
 
   h1 {
-    font-size: 12.7vw;
+    font-size: 51px;
   }
   
   h2 {
-    font-size: 3.8vw;
+    font-size: 20px;
   }
   
   h3 {
-    font-size: 2.9vw;
+    font-size: 16px;
   }
 
   h4 {
-    font-size: 2.8vw;
+    font-size: 13px;
   }
 
-  p {
-    font-size: 1.9vw;
+  p,
+  a {
+    font-size: 11px;
   }
 
   span {
-    font-size: 3vw;
+    font-size: 10px;
   }
 }
 
@@ -107,27 +107,25 @@ body {
   /* Брейк от 768 до 1023 */
 
   h1 {
-    font-size: 11.7vw;
+    font-size: 110px;
   }
   
   h2 {
-    font-size: 1.8vw;
+    font-size: 28px;
   }
   
   h3 {
-    font-size: 1.1vw;
+    font-size: 19px;
   }
 
   h4 {
-    font-size: 2.5vw;
+    font-size: 26px;
   }
 
-  p {
-    font-size: 0.6vw;
-  }
-
-  span {
-    font-size: 0.8vw;
+  p,
+  span,
+  a {
+    font-size: 12px;
   }
 }
 
@@ -135,24 +133,25 @@ body {
   /* Брейк от 1024 до 1280 */
 
   h1 {
-    font-size: 7vw;
+    font-size: 89px;
   }
   
   h2 {
-    font-size: 1.8vw;
+    font-size: 28px;
   }
   
   h3,
   h4 {
-    font-size: 1.1vw;
+    font-size: 19px;
   }
 
-  p {
-    font-size: 0.6vw;
+  p,
+  a {
+    font-size: 12px;
   }
 
   span {
-    font-size: 1vw;
+    font-size: 13px;
   }
 }
 
@@ -160,24 +159,28 @@ body {
   /* Брейк от 1281 до 1769 */
 
   h1 {
-    font-size: 7.5vw;
+    font-size: 115px;
   }
   
   h2 {
-    font-size: 2vw;
+    font-size: 40px;
   }
   
   h3,
   h4 {
-    font-size: 1.1vw;
+    font-size: 26px;
   }
 
   p {
-    font-size: 0.6vw;
+    font-size: 16px;
   }
 
   span {
-    font-size: 1.1vw;
+    font-size: 14px;
+  }
+
+  a {
+    font-size: 13px;
   }
 }
 
@@ -185,26 +188,30 @@ body {
   /* Брейк от 1770 и выше */
     
   h1 {
-    font-size: 6.7vw;
+    font-size: 138px;
   }
   
   h2 {
-    font-size: 1.9vw;
+    font-size: 52px;
   }
   
   h3 {
-    font-size: 1.3vw;
+    font-size: 34px;
   }
 
   h4 {
-    font-size: 1.2vw;
+    font-size: 31px;
   }
 
   p {
-    font-size: 0.6vw;
+    font-size: 20px;
   }
 
   span {
-    font-size: 1.2vw;
+    font-size: 17px;
+  }
+
+  a {
+    font-size: 15px;
   }
 }
