--- a/components/common/CallbackPanel/callbackPanel.module.scss
+++ b/components/common/CallbackPanel/callbackPanel.module.scss
@@ -1,3 +1,13 @@
 .subpanel_phone_number {
   margin-right: 40px;
 }
+
+
+/* Media queries */
+@media (min-width: 0px) and (max-width: 768px) {
+  /* Брейк от 0 до 768 */
+
+  .subpanel_phone_number {
+    display: none;
+  }
+}
