--- a/assets/basic_styles/globals.scss
+++ b/assets/basic_styles/globals.scss
@@ -44,14 +44,14 @@
 /* Global-styles */
 html,
 body {
-  max-width: 100vw;
   font-family: 'ProximaNova-Regular';
   text-transform: uppercase;
+  background-color: var(--white);
 }
 
 body {
-  padding: 0 20px;
-
+  padding: 131px 20px 0 20px;
+  margin: 0 auto;
   h1,
   h2,
   h3,
@@ -71,11 +71,15 @@ body {
   }
 }
 
+body,
+header {
+  max-width: 1920px;
+}
 
 
 /* Media queries */
-@media (min-width: 0px) and (max-width: 768px) {
-  /* Брейк от 0 до 768 */
+@media (min-width: 0px) and (max-width: 520px) {
+  /* Брейк от 0 до 520 */
 
   h1 {
     font-size: 51px;
@@ -103,8 +107,8 @@ body {
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
-  /* Брейк от 768 до 1023 */
+@media (min-width: 520px) and (max-width: 768px) {
+  /* Брейк от 520 до 768 */
 
   h1 {
     font-size: 110px;
@@ -129,63 +133,71 @@ body {
   }
 }
 
-@media (min-width: 1024px) and (max-width: 1280px) {
-  /* Брейк от 1024 до 1280 */
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* Брейк от 768 до 1024 */
 
-  h1 {
-    font-size: 89px;
-  }
-  
-  h2 {
-    font-size: 28px;
-  }
-  
-  h3,
-  h4 {
-    font-size: 19px;
-  }
+  body {
+    padding-top: 100px;
 
-  p,
-  a {
-    font-size: 12px;
-  }
+    h1 {
+      font-size: 89px;
+    }
+    
+    h2 {
+      font-size: 28px;
+    }
+    
+    h3,
+    h4 {
+      font-size: 19px;
+    }
 
-  span {
-    font-size: 13px;
+    p,
+    a {
+      font-size: 12px;
+    }
+
+    span {
+      font-size: 13px;
+    }
   }
 }
 
-@media (min-width: 1281px) and (max-width: 1769px) {
-  /* Брейк от 1281 до 1769 */
+@media (min-width: 1024px) and (max-width: 1440px) {
+  /* Брейк от 1024 до 1440 */
 
-  h1 {
-    font-size: 115px;
-  }
+  body {
+    padding-top: 100px;
+
+    h1 {
+      font-size: 115px;
+    }
+    
+    h2 {
+      font-size: 40px;
+    }
+    
+    h3,
+    h4 {
+      font-size: 26px;
+    }
   
-  h2 {
-    font-size: 40px;
-  }
+    p {
+      font-size: 16px;
+    }
   
-  h3,
-  h4 {
-    font-size: 26px;
-  }
-
-  p {
-    font-size: 16px;
-  }
-
-  span {
-    font-size: 14px;
-  }
-
-  a {
-    font-size: 13px;
+    span {
+      font-size: 14px;
+    }
+  
+    a {
+      font-size: 13px;
+    }
   }
 }
 
-@media (min-width: 1770px) {
-  /* Брейк от 1770 и выше */
+@media (min-width: 1440px) {
+  /* Брейк от 1440 и выше */
     
   h1 {
     font-size: 138px;
