--- a/assets/basic_styles/globals.scss
+++ b/assets/basic_styles/globals.scss
@@ -89,7 +89,7 @@ header {
     padding: 80px 20px 0 20px;
     
     h1 {
-      font-size: 62px;
+      font-size: 58px;
     }
     
     h2 {
@@ -122,7 +122,7 @@ header {
     padding: 120px 40px 0 40px;
 
     h1 {
-      font-size: 156px;
+      font-size: 62px;
     }
     
     h2 {
@@ -175,7 +175,7 @@ header {
   }
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) and (max-width: 1441px) {
   /* Брейк от 1025 до 1440 */
 
   body {
@@ -187,6 +187,7 @@ header {
     
     h2 {
       font-size: 40px;
+      line-height: 36px;
     }
     
     h3,
@@ -220,7 +221,8 @@ header {
     }
     
     h2 {
-      font-size: 52px;
+      font-size: 36px;
+      line-height: 48px;
     }
     
     h3 {
@@ -233,15 +235,13 @@ header {
     }
 
     p {
-      font-size: 20px;
+      font-size: 22px;
+      line-height: 34px;
     }
 
-    span {
-      font-size: 17px;
-    }
-
+    span,
     a {
-      font-size: 15px;
+      font-size: 17px;
     }
   }
 }
