--- a/assets/basic_styles/globals.scss
+++ b/assets/basic_styles/globals.scss
@@ -81,6 +81,29 @@ header {
 }
 
 
+/* Styles for feedback modal window */
+.alert-enter {
+  opacity: 0;
+  transform: scale(0.9);
+}
+
+.alert-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 300ms, transform 300ms;
+}
+
+.alert-exit {
+  opacity: 1;
+}
+
+.alert-exit-active {
+  opacity: 0;
+  transform: scale(0.9);
+  transition: opacity 300ms, transform 300ms;
+}
+
+
 /* Media queries */
 @media (min-width: 0px) and (max-width: 521px) {
   /* Брейк от 0 до 521 */
