--- a/components/common/FeedbackModalWindow/feedbackModalWindow.module.scss
+++ b/components/common/FeedbackModalWindow/feedbackModalWindow.module.scss
@@ -8,5 +8,26 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   background-color: var(--white);
+  padding: 40px 20px 20px 20px;
+
+  .window_close_btn {
+    position: absolute;
+    top: 60px;
+    right: 60px;
+  }
+
+  .modal_window_title {
+    margin-bottom: 80px;
+  }
+}
+
+
+/* Media queries */
+@media (min-width: 0px) and (max-width: 769px) {
+  .window_close_btn {
+    top: 20px !important;
+    right: 20px !important;
+  }
 }
