Changed text in btn feedback

--- a/components/common/CallbackPanel/PhoneBtn/phoneBtn.module.scss
+++ b/components/common/CallbackPanel/PhoneBtn/phoneBtn.module.scss
@@ -13,7 +13,7 @@
   transition: .2s ease-in;
 
   &:after {
-    content: "Заказать обратный звонок";
+    content: "Заказать звонок";
     position: absolute;
     left: 0;
     top: 0;
